commit: fixed z-index of global header

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -63,6 +63,7 @@
         position: fixed;
         top: 0;
         background-color: rgba(255, 255, 255, 0.718);
+        z-index: 10;
     }
     .global-header__top-box{
         width: var(--global-width-992px);
