--- a/css/homepage.style.css
+++ b/css/homepage.style.css
@@ -75,7 +75,7 @@
         left: 70px;
         bottom: 70px;
         box-shadow: 4px 5px 8px #888888;
-
+        z-index: 1;
     }
     .section-one__main-feature-box > div > h6{
         font-size: var(--global-h6-font-size);
